--- a/external/source/metsvc/src/Makefile
+++ b/external/source/metsvc/src/Makefile
@@ -2,8 +2,8 @@
 
 CC := clang-cl
 
-CFLAGS  := /nologo
-LDFLAGS := /nologo
+CFLAGS  :=  -m32 /nologo /machine:x86
+LDFLAGS :=  /nologo /machine:x86
 
 PROGRAMS := metsvc.exe metsvc-server.exe
 SCRIPTS := install.bat
